--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,50 @@
-.html {
+html, body {
+    height: 100%;
+    width: 100%;
+    min-height: 100%;
+}
 
+.hero {
+    text-align: center;
+    min-height: 500px;
+    position: relative;
+    z-index: 4;
+    background-image: linear-gradient(-180deg,#24b8eb 4%,#218cf4 100%);
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    color: white;
+}
+
+.hero .container {
+    height: 100%;
+}
+
+.hero .wrapper {
+    position: relative;
+    top: 50%;
+    transform: translateY(-70%);
+}
+
+.hero .launch {
+    color: #666;
+    width: 60%;
+    box-shadow: 0px 0px 20px 1px rgba(48, 144, 178, 0.75);
+}
+
+.logo-wrapper {
+    margin-bottom: 10px;
+}
+
+img.logo {
+    width: 50px;
+    display: inline-block;
+    vertical-align:middle
+}
+
+.logo-wrapper span {
+    margin-left: 10px;
+    font-size: 4rem;
+    display: inline-block;
+    vertical-align:middle
 }
