got docker stream hooked up to term.js front-end using socket.io

--- a/templates/terminal.tmpl
+++ b/templates/terminal.tmpl
@@ -14,27 +14,12 @@
     <link rel="stylesheet" href="css/style.css" />
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
+    <script src="js/vendor/term.js"></script>
     <link rel="icon" type="image/png" href="images/favicon.png" />
 </head>
 <body>
 
-    <div id="app">
-
-    </div>
-    <div class="u-full-width hero">
-        <div class="container">
-            <div class="wrapper">
-                <div class="row logo-wrapper">
-                    <img class="logo" src="images/box.png"></img>
-                    <span>Docklet</span>
-                </div>
-
-                <input class="launch" type="text" placeholder="Enter Docker image name from registry..." />
-            </div>
-        </div>
-    </div>
-
-    <script src="js/socket.js"></script>
+<script src="js/terminal.js"></script>
 
 </body>
 </html>
