--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Docklet - Run Docker containers on demand</title>
+    <title>Docklet - Run Docker containers on the web</title>
     <meta name="description" content="Run Docker containers on demand in the cloud for experimentation and rapid prototyping.">
     <meta name="author" content="Keshav Varma, Satya Bodduluri">
 
@@ -17,22 +17,7 @@
 </head>
 <body>
 
-    <div id="app">
-
-    </div>
-    <div class="u-full-width hero">
-        <div class="container">
-            <div class="wrapper">
-                <div class="row logo-wrapper">
-                    <img class="logo" src="images/box.png"></img>
-                    <span>Docklet</span>
-                </div>
-
-                <input class="launch" type="text" placeholder="Enter Docker image name from registry...">
-            </div>
-        </div>
-    </div>
-
+    <div id="app" class="u-full-width hero"></div>
     <script src="js/bundle.js"></script>
 
 </body>
