--- a/templates/terminal.tmpl
+++ b/templates/terminal.tmpl
@@ -19,6 +19,13 @@
 </head>
 <body>
 
+<!--<div id="log"></div>-->
+
+<!--<form id="form">-->
+    <!--<input type="submit" value="Send" />-->
+    <!--<input type="text" id="msg" size="64"/>-->
+<!--</form>-->
+
 <script src="js/terminal.js"></script>
 
 </body>
