--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Docklet - Run Docker containers on the web</title>
-    <meta name="description" content="Run Docker containers on demand in the cloud for experimentation and rapid prototyping.">
-    <meta name="author" content="Keshav Varma, Satya Bodduluri">
+    <meta name="description" content="Run Docker containers on demand in the cloud for experimentation and rapid prototyping." />
+    <meta name="author" content="Keshav Varma, Satya Bodduluri" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/skeleton.css">
-    <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css' />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/animate.css" />
+    <link rel="stylesheet" href="css/skeleton.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <link rel="icon" type="image/png" href="images/favicon.png">
+    <link rel="icon" type="image/png" href="images/favicon.png" />
 </head>
 <body>
     <div id="app" class="u-full-width hero"></div>
     <script src="js/bundle.js"></script>
-
 </body>
 </html>
