--- a/templates/terminal.tmpl
+++ b/templates/terminal.tmpl
@@ -18,7 +18,7 @@
     <link rel="icon" type="image/png" href="images/favicon.png" />
 </head>
 <body>
-
+<div id="terminal"></div>
 <script>window.id = '{{.Id}}'</script>
 <script src="js/terminal.js"></script>
 
